# CubeCoach

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-except-kociemba.txt  requirements.txt
.github/workflows/: python-package.yml
cubecoach/: __init__.py  cli.py  gui.py
cubecoach/solver/: kociemba_solver.py
cubecoach/vision/: calibrate.py  calibration.json  camera.py  colors.py  detector.py  scan.py
cubecoach/vision/scans/: F_1767844956.json  L_1767844990.json
scripts/: check_dependencies.py  run_demo.sh  setup_env.ps1  setup_env.sh
tests/: test_camera_demo.py  test_colors.py  test_colors_confidence.py  test_detector.py  test_scan_autocal.py  test_scan_preview.py  test_scan_rescan.py  test_solver.py
